force-app/main/default/objects/PAFPACKQUOTEJUNC__c/PAFPACKQUOTEJUNC__c.object-meta.xml
<CustomObject>
    <label>PAFPACKQUOTEJUNC</label>
    <nameField>
        <displayFormat>PAFPQJUNC Name {0000000}</displayFormat>
        <label>PAFPACKQUOTEJUNC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAFPACKQUOTEJUNC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>