force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Inbound_City__c.field-meta.xml
<CustomField>
    <fullName>Inbound_City__c</fullName>
    <label>Inbound City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>