force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Inbound_Gateway_Name__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Gateway_Name__c</fullName>
    <formula>IF( TEXT( Inbound_Gateway__c ) = &quot;SYD&quot;, &quot;Sydney&quot;, 
 IF( TEXT(Inbound_Gateway__c) = &quot;BNE&quot;, &quot;Brisbane&quot;, 
 IF( TEXT(Inbound_Gateway__c) = &quot;MEL&quot;, &quot;Melbourne&quot;, 
 IF( TEXT(Inbound_Gateway__c) = &quot;ADL&quot;, &quot;Adelaide&quot;, 
 IF( TEXT(Inbound_Gateway__c) = &quot;PER&quot;, &quot;Perth&quot;,&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inbound Gateway Name</label>
    <type>Text</type>
</CustomField>