force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Outbound_City__c.field-meta.xml
<CustomField>
    <fullName>Outbound_City__c</fullName>
    <label>Outbound City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>