force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Outbound_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Outbound_City_Name__c</fullName>
    <formula>IF( TEXT(Outbound_City__c) =	&quot;SYD&quot;	,	&quot;Sydney	&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;BNE&quot;	,	&quot;Brisdnae	&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;MEL&quot;	,	&quot;Melbourne	&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;ADL&quot;	,	&quot;Adelaide	&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;PER&quot;	,	&quot;Perth	&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;AMS&quot;	,	&quot;Amsterdam	&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;BCN&quot;	,	&quot;Barcelona&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;BUD&quot;	,	&quot;Budapest&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;CDG&quot;	,	&quot;Paris&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;FCO&quot;	,	&quot;Rome&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;FRA&quot;	,	&quot;Frankfurt&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;MAD&quot;	,	&quot;Madrid&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;VCE&quot;	,	&quot;Venice&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;ARN&quot;	,	&quot;Stockholm&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;ATH&quot;	,	&quot;Athens&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;CPH&quot;	,	&quot;Copenhagen&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;DUB&quot;	,	&quot;Dublin&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;LHR&quot;	,	&quot;London&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;NCE&quot;	,	&quot;Nice&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;PRG&quot;	,	&quot;Prague&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;VIE&quot;	,	&quot;Vienna&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;LAX&quot;	,	&quot;Los Angeles&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;SFO&quot;	,	&quot;San Francisco&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;LAS&quot;	,	&quot;Las Vegas&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;SEA&quot;	,	&quot;Seattle&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;SAN&quot;	,	&quot;San Diego&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;PDX&quot;	,	&quot;Portland&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;ORD&quot;	,	&quot;Chicago&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;DFW&quot;	,	&quot;Dallas-Fort Worth&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;DEN&quot;	,	&quot;Denver&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;JFK&quot;	,	&quot;New York&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;MIA&quot;	,	&quot;Miami&quot;	,
IF( TEXT(Outbound_City__c) =	&quot;DCA&quot;	,	&quot;Washington&quot;	,&quot;&quot;)))))))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outbound City Name</label>
    <type>Text</type>
</CustomField>