force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Outbound_Day__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Day__c</fullName>
    <formula>IF(  zzDatetime_Outbound__c  = 0 , &quot;Saturday&quot;, 
IF( zzDatetime_Outbound__c = 1 , &quot;Sunday&quot;, 
IF( zzDatetime_Outbound__c = 2 , &quot;Monday&quot;, 
IF( zzDatetime_Outbound__c = 3 , &quot;Tuesday&quot;, 
IF( zzDatetime_Outbound__c = 4 , &quot;Wednesday&quot;, 
IF( zzDatetime_Outbound__c = 5 , &quot;Thursday&quot;, 
IF( zzDatetime_Outbound__c = 6 , &quot;Friday&quot;,&quot;Error&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outbound Day</label>
    <type>Text</type>
</CustomField>