force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Outbound_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Gateway__c</fullName>
    <label>Outbound Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aust_Gateways</valueSetName>
    </valueSet>
</CustomField>