force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Outbound_Gateway_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Gateway_Name_del__c</fullName>
    <formula>IF( TEXT( Outbound_Gateway__c ) = &quot;SYD&quot;, &quot;Sydney&quot;, 
 IF( TEXT(Outbound_Gateway__c) = &quot;BNE&quot;, &quot;Brisbane&quot;,
 IF( TEXT(Outbound_Gateway__c) = &quot;MEL&quot;, &quot;Melbourne&quot;,
 IF( TEXT(Outbound_Gateway__c) = &quot;ADL&quot;, &quot;Adelaide&quot;,
 IF( TEXT(Outbound_Gateway__c) = &quot;PER&quot;, &quot;Perth&quot;,&quot;&quot;)))))</formula>
    <label>Outbound Gateway Name</label>
    <type>Text</type>
</CustomField>