force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/OutGateText__c.field-meta.xml
<CustomField>
    <fullName>OutGateText__c</fullName>
    <formula>TEXT(Outbound_Gateway__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OutGateText</label>
    <type>Text</type>
</CustomField>