force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <formula>PQJunc_Pack__r.PP_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Name</label>
    <type>Text</type>
</CustomField>