force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/PQJunc_Pack__c.field-meta.xml
<CustomField>
    <fullName>PQJunc_Pack__c</fullName>
    <label>PAF Package</label>
    <referenceTo>PAF_Package__c</referenceTo>
    <relationshipLabel>PAFPACKQUOTEJUNC</relationshipLabel>
    <relationshipName>PAFPACKQUOTEJUNC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>