force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/qn__c.field-meta.xml
<CustomField>
    <fullName>qn__c</fullName>
    <formula>QPJunc_Pack__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>qn</label>
    <type>Text</type>
</CustomField>