force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/QPJunc_Pack__c.field-meta.xml
<CustomField>
    <fullName>QPJunc_Pack__c</fullName>
    <label>PAF Quote</label>
    <referenceTo>PAF_Quote__c</referenceTo>
    <relationshipLabel>PAFPACKQUOTEJUNC</relationshipLabel>
    <relationshipName>PAFPACKQUOTEJUNC</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>