force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Sent_to_WP__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_WP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to WP</label>
    <type>Checkbox</type>
</CustomField>