force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Stopover_City__c.field-meta.xml
<CustomField>
    <fullName>Stopover_City__c</fullName>
    <label>Stopover City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUH</fullName>
            </value>
            <value>
                <fullName>DXB</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>HNL</fullName>
            </value>
            <value>
                <fullName>SIN</fullName>
            </value>
            <value>
                <fullName>BKK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>