force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Stopover_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Stopover_City_Name__c</fullName>
    <formula>IF( TEXT(  Stopover_City__c  ) = &quot;AUH&quot;, &quot;Abu Dhabi&quot;, 
 IF( TEXT(Stopover_City__c) = &quot;DXB&quot;, &quot;Dubai&quot;, 
 IF( TEXT(Stopover_City__c) = &quot;HKG&quot;, &quot;Hong Kong&quot;, 
 IF( TEXT(Stopover_City__c) = &quot;SIN&quot;, &quot;Singapore&quot;, 
 IF( TEXT(Stopover_City__c) = &quot;BKK&quot;, &quot;Bangkok&quot;,&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stopover City Name</label>
    <type>Text</type>
</CustomField>