force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/Stopover_Inbound_Nights__c.field-meta.xml
<CustomField>
    <fullName>Stopover_Inbound_Nights__c</fullName>
    <label>Stopover Inbound(Nights)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>