force-app/main/default/objects/PAFPACKQUOTEJUNC__c/fields/zzDatetime_Inbound__c.field-meta.xml
<CustomField>
    <fullName>zzDatetime_Inbound__c</fullName>
    <formula>MOD(  Return_Date__c  - DATE(1900, 1, 6), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzDatetime(Inbound)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>